| Bug #54521 | Multi-threaded ordered index build is not implemented for ndbmtd | ||
|---|---|---|---|
| Submitted: | 15 Jun 2010 14:57 | Modified: | 7 Sep 2010 14:41 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[15 Jun 2010 14:57]
Jonas Oreland
[15 Jun 2010 15:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/111174 3602 Jonas Oreland 2010-06-15 ndb - bug#54521 - enable multi threaded ordered index build for ndbmtd
[15 Jun 2010 15:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/111176 3606 Jonas Oreland 2010-06-15 ndb - bug#54521 - enable multi threaded ordered index build for ndbmtd
[15 Jun 2010 15:11]
Jonas Oreland
pushed to 7.0.16 and 7.1.5
[8 Jul 2010 14:23]
Jon Stephens
Documented in the NDB-7.0.16 and 7.1.5 changelogs as follows;
The setting for BuildIndexThreads was ignored by ndbmtd, which
made it impossible to use more than 4 cores for rebuilding
indexes.
Closed.
[7 Sep 2010 12:56]
Joffrey MICHAIE
Hi Team, I think documentation should be updated also : http://dev.mysql.com/doc/refman/5.1/en/mysql-cluster-ndbd-definition.html#ndbparam-ndbd-bu... BuildIndexThreads Version Introduced 5.1.39-ndb-7.0.11 Restart Type Permitted Values Type numeric Default 0 Range 0-128 This parameter determines the number of threads to create to rebuild indexes during a system or node start. It is supported only when using ndbd (it does not work with ndbmtd) and when there is more than one fragment for the table per data node (for example, when the MAX_ROWS option has been used with CREATE TABLE). Setting this parameter to 0 (also the default value) disables multi-threaded building of ordered indexes. The maximum allowed value is 128. This parameter was added in MySQL Cluster NDB 6.3.30 and MySQL Cluster NDB 7.0.11. Thank you in advance, BR, Joffrey
[7 Sep 2010 14:41]
Jon Stephens
Thank you for your bug report. This issue has been addressed in the documentation. The updated documentation will appear on our website shortly, and will be included in the next release of the relevant products. http://lists.mysql.com/commits/117711
