ndb - bug#54521 - enable multi threaded ordered index build for ndbmtd